--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "jssha": "^3.2.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
     "react-img-zoom": "^0.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "reactjs-credit-card": "^1.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
