--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "daisyui": "^2.15.4",
+    "emailjs-com": "^3.2.0",
     "js-cookie": "^3.0.1",
     "jssha": "^3.2.0",
     "react": "^18.2.0",
