--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "daisyui": "^2.15.4",
     "emailjs-com": "^3.2.0",
     "js-cookie": "^3.0.1",
     "jssha": "^3.2.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.2.0",
     "react-cookie": "^4.1.1",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
@@ -46,6 +48,12 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.19.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "tailwindcss": "^3.1.3"
   }
 }
