--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^3.8.0",
     "daisyui": "^2.15.4",
     "emailjs-com": "^3.2.0",
+    "firebase": "^9.9.0",
     "js-cookie": "^3.0.1",
     "jssha": "^3.2.0",
     "react": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-cookie": "^4.1.1",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-img-zoom": "^0.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
