--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "emailjs-com": "^3.2.0",
     "js-cookie": "^3.0.1",
     "jssha": "^3.2.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.0",
     "react-cookie": "^4.1.1",
